package com.vuelosfis.model;

public enum ClaseAsiento {
    ECONOMICA,
    EJECUTIVA,
    PRIMERA_CLASE
}
