package com.vuelosfis.model;

public enum EstadoReserva {
    PENDIENTE,
    CONFIRMADA,
    CANCELADA,
    PAGADA,
    REEMBOLSADA
}
