package com.vuelosfis.model;

public enum EstadoVuelo {
    PROGRAMADO,
    DEMORADO,
    ABORDANDO,
    EN_AIRE,
    ATERRIZADO,
    CANCELADO
}
