package com.vuelosfis.model;

public interface INotificationService {
    void notificar(String mensaje, String destinatario);
}
